syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    This table contains live trading status records for entire product groups (futures and options) and asset groups and individual instruments
*/    
message ProductTradingStatusV2 {
    message PKey {
        
        OptionKey sec_key = 10; // trading status product key. Interpretation depends on the status type
        SpdrKeyType sec_type = 11;
        TradingStatusType trading_status_type = 12; // Processing level for the product trading status: 1 = statusKey is the product group key, 2 = statusKey is the security group key, statusKey is for an individual instrument
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    DateKey trade_date = 100;
    MarketStatus market_status = 103; // market status (open, halted, etc)
    google.protobuf.Timestamp timestamp = 106; // time of last state update (CST)
}


